kubernetes/manifests/observability/httproute-observability.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: grafana
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
